meego-keyboard (0.5.20~1) unstable; urgency=low

  * [UNRELEASED]

 -- huaming wang <huaming.wang@nokia.com>  Wed, 15 Dec 2010 11:33:50 +0200

meego-keyboard (0.5.19-1) unstable; urgency=low

  * Fixes: NB#208276 - Excess communication between application and IM server delays key-presses
  * Fixes: NB#203531 - Duplicate symbols in VKB (landscape only)
  * Fixes: NB#205462 - Remove 'w' from supported characters in telephony input mode

 -- huaming wang <huaming.wang@nokia.com>  Wed, 15 Dec 2010 11:27:14 +0200

meego-keyboard (0.5.18-1) unstable; urgency=low

  * Changes: Modifying  dependency from libmeegoimenginewords-dev to libmeegoimengine-dev

 -- huaming wang <huaming.wang@nokia.com>  Thu, 09 Dec 2010 11:46:54 +0200

meego-keyboard (0.5.17-1) unstable; urgency=low

  * Changes: do not use local theme for unit tests

 -- huaming wang <huaming.wang@nokia.com>  Tue, 07 Dec 2010 11:56:48 +0200

meego-keyboard (0.5.16-1) unstable; urgency=low

  * Fixes: Ut_FlickRecognizer unit test failure
  * Changes: pending updating candidates for word tracker or word list
  * Changes: use correct id for notification when all keyboards are unselecte
  * Changes: skip the ut_mimtoolbar testRegion case due to Qt regression.

 -- Ning Chi <ext-chi.ning@nokia.com>  Fri, 03 Dec 2010 16:08:39 +0200

meego-keyboard (0.5.15-1) unstable; urgency=low

  * Changes: Catch up with meegotouch-inputmethodengine update on Version 0.4 .
  * Changes: use cursor position to locate wordtracker.
  * Fixes: NB#206444 - Strange behavior of Smiley Picker and Done/Send buttons in Conversational View
  * Fixes: NB#204964 - Toolbar button label is truncated in portrait mode

 -- Gibran Rodriguez <ext-gibran.rodriguez@nokia.com>  Wed, 01 Dec 2010 11:19:06 +0200

meego-keyboard (0.5.14-1) unstable; urgency=low

  * Fixes: NB#204084 - Some characters missing from HWKB mode
  * Fixes: NB#187296 - Nothing is happening when trying to enter number char by long pressing from HKB in the number text field.